Bug 292188 - Font size of favourite folder list can not be changed
Summary: Font size of favourite folder list can not be changed
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: 1.99.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-22 12:39 UTC by m.wege
Modified: 2012-01-23 11:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description m.wege 2012-01-22 12:39:21 UTC
Version:           1.99.0 (using Devel) 
OS:                Linux

I just changed the font size of the folder list an noticed that the favourite the font size of the favourite folder list neither did not adapt to that nor is there a separate setting for it.

Reproducible: Always

Steps to Reproduce:
see above

Actual Results:  
see above

Expected Results:  
Either there should be a separate setting for the font size of the favourite folder list or the setting for the folder list should be used.

OS: Linux (x86_64) release 3.0.0-15-generic
Compiler: gcc
Comment 1 Laurent Montel 2012-01-23 09:04:44 UTC
I started to fix it.
It can load config but not react to fontchanged (don't know why for the moment)
Comment 2 Laurent Montel 2012-01-23 11:37:05 UTC
Git commit 9f4f167cb7d5eea838f931b1f79bfc573f1ff28a by Montel Laurent.
Committed on 23/01/2012 at 12:36.
Pushed by mlaurent into branch 'master'.

Fix Bug 292188 - Font size of favourite folder list can not be changed

FIXED-IN: 4.8.1

M  +3    -0    kmail/kmmainwidget.cpp
M  +0    -1    mailcommon/favoritecollectionwidget.h

http://commits.kde.org/kdepim/9f4f167cb7d5eea838f931b1f79bfc573f1ff28a
Comment 3 Laurent Montel 2012-01-23 11:37:33 UTC
Git commit b7459feb688afec43bcd22dc3c976ea48ff2290b by Montel Laurent.
Committed on 23/01/2012 at 12:36.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 292188 - Font size of favourite folder list can not be changed

FIXED-IN: 4.8.1
(cherry picked from commit 9f4f167cb7d5eea838f931b1f79bfc573f1ff28a)

M  +3    -0    kmail/kmmainwidget.cpp
M  +0    -1    mailcommon/favoritecollectionwidget.h

http://commits.kde.org/kdepim/b7459feb688afec43bcd22dc3c976ea48ff2290b