Fix Bug 292188 - Font size of favourite folder list can not be changed

FIXED-IN: 4.8.1
BUG: 292188